correct text width on mobile

--- a/src/components/news/NewsCard.module.css
+++ b/src/components/news/NewsCard.module.css
@@ -38,5 +38,11 @@ a:hover {
 }
 
 .newsimage {
-    max-width: 450px;
+    max-width: inherit;
 }
+
+@media only screen and (max-width: 975px) {
+    .card {
+        max-width: -webkit-fill-available;;
+    }
+  }
